@@ -12,8 +12,8 @@ module Fairy
   CONF["giant"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev"
 
 ##CONF.MASTER_HOST = #NO SYSTEM DEFAULT VALUE
-#  CONF.MASTER_HOST = "emperor2"
-  CONF.MASTER_HOST = "giant"
+  CONF.MASTER_HOST = "emperor2"
+#  CONF.MASTER_HOST = "giant"
 ##CONF.MASTER_PORT = "19999"
 
   CONF["emperor2"].HOME = ENV["FAIRY_HOME"] || File.expand_path(".")
@@ -65,7 +65,7 @@ module Fairy
 ##CONF.LOCAL_OUTPUT_POOL_THRESHOLD = 32000
 
 ##CONF.N_MOD_GROUP_BY = 5
-CONF.N_MOD_GROUP_BY = 10
+#CONF.N_MOD_GROUP_BY = 10
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
 ##CONF.HASH_MODULE = "fairy/share/hash-md5"
